Make HTML asset and nav paths relative for GitHub Pages subpath

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>ZOON CORP Pvt Ltd | Global Trade & IT Solutions</title>
   <meta name="description" content="ZOON CORP delivers premium Kashmiri dry-fruit exports and enterprise-grade IT, cloud, integration, and digital services.">
   <meta name="keywords" content="dry fruit exporter, kashmiri walnuts, IT consulting, cloud services, digital transformation">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="canonical" href="https://www.zooncorp.com/">
   <script type="application/ld+json">
 {
@@ -36,11 +36,11 @@
 <a href="#main" class="skip-link">Skip to main content</a>
 <header class="site-header">
   <div class="wrap">
-    <a class="brand" href="/" title="ZOON CORP — Home"><img src="/logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
+    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
     <nav id="main-nav" class="nav" role="navigation" aria-label="Main Navigation">
-      <a href="/about.html">About</a>
-      <a href="/services.html">Services</a>
-      <a href="/contact.html" class="cta">Contact</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html" class="cta">Contact</a>
     </nav>
     <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
       <svg class="sun" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -77,8 +77,8 @@
       <p class="lead">ZOON CORP Pvt Ltd operates at the intersection of high-quality agricultural trade and advanced digital engineering. We source, process and export premium Kashmiri dry-fruits while providing cloud, security, integration and automation solutions for modern enterprises. Our combined capabilities enable global clients to scale both their supply chains and their digital systems with a single, accountable partner.</p>
 
       <div class="hero-ctas">
-        <a class="btn primary large" href="/services.html">Explore Services</a>
-        <a class="btn outline large" href="/contact.html">Contact Us</a>
+        <a class="btn primary large" href="services.html">Explore Services</a>
+        <a class="btn outline large" href="contact.html">Contact Us</a>
       </div>
 
       <ul class="cred-list">
@@ -93,13 +93,13 @@
       <div class="hero-carousel">
         <div class="carousel-container">
           <div class="carousel-slide active">
-            <img src="/assets/img/hero-1.jpg" width="500" height="500" alt="Trade and technology excellence" loading="lazy">
+            <img src="assets/img/hero-1.jpg" width="500" height="500" alt="Trade and technology excellence" loading="lazy">
           </div>
           <div class="carousel-slide">
-            <img src="/assets/img/walnut-bg.jpg" width="500" height="500" alt="Premium walnut exports" loading="lazy">
+            <img src="assets/img/walnut-bg.jpg" width="500" height="500" alt="Premium walnut exports" loading="lazy">
           </div>
           <div class="carousel-slide">
-            <img src="/assets/img/deep-B1bKrxnr3-c-unsplash.png" width="500" height="500" alt="Digital transformation solutions" loading="lazy">
+            <img src="assets/img/deep-B1bKrxnr3-c-unsplash.png" width="500" height="500" alt="Digital transformation solutions" loading="lazy">
           </div>
         </div>
         <div class="carousel-dots">
@@ -133,21 +133,21 @@
         <h3>Premium Dry-Fruit Exports</h3>
         <p>High-grade walnuts, almonds, saffron and seasonal produce sourced directly from certified growers, processed through controlled workflows, and shipped with export documentation and compliance.</p>
         <div class="card-actions">
-          <a class="btn primary" href="/services.html#premium-exports">Learn More</a>
-          <a class="btn outline" href="/contact.html">Get Quote</a>
+          <a class="btn primary" href="services.html#premium-exports">Learn More</a>
+          <a class="btn outline" href="contact.html">Get Quote</a>
         </div>
       </article>
 
       <article class="card">
         <div class="img-wrap">
-          <img src="/assets/img/service-it.jpg" width="600" height="400" alt="Modern cloud infrastructure and IT consulting services" loading="lazy">
+          <img src="assets/img/service-it.jpg" width="600" height="400" alt="Modern cloud infrastructure and IT consulting services" loading="lazy">
           <div class="img-caption">Cloud & Security</div>
         </div>
         <h3>IT Consulting & Cloud</h3>
         <p>Architecture design, platform modernization, cloud migrations, cost governance, identity access controls, automation pipelines and cybersecurity baselines aligned with global standards.</p>
         <div class="card-actions">
-          <a class="btn primary" href="/services.html#it-cloud">Learn More</a>
-          <a class="btn outline" href="/contact.html">Request Meeting</a>
+          <a class="btn primary" href="services.html#it-cloud">Learn More</a>
+          <a class="btn outline" href="contact.html">Request Meeting</a>
         </div>
       </article>
 
@@ -169,8 +169,8 @@
         <h3>Digital Transformation</h3>
         <p>End-to-end capability spanning UX, system design, engineering, API integration, dashboards, analytics and workflow automation.</p>
         <div class="card-actions">
-          <a class="btn primary" href="/services.html#digital-transformation">Learn More</a>
-          <a class="btn outline" href="/contact.html">Start a Project</a>
+          <a class="btn primary" href="services.html#digital-transformation">Learn More</a>
+          <a class="btn outline" href="contact.html">Start a Project</a>
         </div>
       </article>
     </div>
@@ -178,14 +178,14 @@
   </div>
 </section>
 
-<section class="testimonials parallax-bg" aria-labelledby="testimonials-title" data-bg-image="/assets/img/walnut.jpg">
+  <section class="testimonials parallax-bg" aria-labelledby="testimonials-title" data-bg-image="assets/img/walnut.jpg">
   <div class="wrap">
     <h2 id="testimonials-title" class="section-title">Client Success Stories</h2>
     <div class="testimonial-grid">
       <blockquote class="testimonial">
         <p>"ZOON CORP transformed our legacy systems into a modern, scalable cloud infrastructure. Their expertise in both agricultural exports and digital engineering is unmatched."</p>
         <cite>
-          <img src="/assets/img/zeynep-sumer-OHRMHP4S-OI-unsplash.jpg" alt="Client testimonial" width="60" height="60" loading="lazy">
+          <img src="assets/img/zeynep-sumer-OHRMHP4S-OI-unsplash.jpg" alt="Client testimonial" width="60" height="60" loading="lazy">
           <div>
             <strong>Sarah Johnson</strong>
             <span>CTO, Global AgriTech Corp</span>
@@ -195,7 +195,7 @@
       <blockquote class="testimonial">
         <p>"The quality of their Kashmiri walnuts and the efficiency of their export process helped us expand our international distribution network significantly."</p>
         <cite>
-          <img src="/assets/img/traci-milimo-_qhBQZC1miw-unsplash.jpg" alt="Client testimonial" width="60" height="60" loading="lazy">
+          <img src="assets/img/traci-milimo-_qhBQZC1miw-unsplash.jpg" alt="Client testimonial" width="60" height="60" loading="lazy">
           <div>
             <strong>Michael Chen</strong>
             <span>Procurement Director, Premium Foods Inc</span>
@@ -230,25 +230,25 @@
   </svg>
 </button>
 
-<script src="/assets/js/main.js" defer></script>
+<script src="assets/js/main.js" defer></script>
 <footer class="site-footer">
   <div class="wrap footer-grid">
     <div class="brand-col">
-      <img src="/logo/zoon-logo.svg" alt="ZOON CORP" height="36">
+      <img src="logo/zoon-logo.svg" alt="ZOON CORP" height="36">
       <p>Connecting global agriculture with enterprise technology. Supply, systems, scale.</p>
     </div>
     <div class="links-col">
       <h4>Company</h4>
-      <a href="/index.html">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/services.html">Services</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </div>
     <div class="links-col">
       <h4>Legal</h4>
-      <a href="/privacy-policy.html">Privacy Policy</a>
-      <a href="/terms.html">Terms of Service</a>
-      <a href="/sitemap.xml">Sitemap</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Service</a>
+      <a href="sitemap.xml">Sitemap</a>
     </div>
     <div class="contact-col">
       <h4>Connect</h4>
