--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <title>Services — ZOON CORP</title>
   <meta name="description" content="Explore ZOON CORP services: dry-fruit exports, IT consulting, cloud engineering, integration, and digital transformation.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="canonical" href="https://www.zooncorp.com/services.html">
   <script type="application/ld+json">
 {
@@ -33,11 +33,11 @@
 <a href="#main" class="skip-link">Skip to main content</a>
 <header class="site-header">
   <div class="wrap">
-    <a class="brand" href="/" title="ZOON CORP — Home"><img src="/logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
+    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
     <nav id="main-nav" class="nav" role="navigation" aria-label="Main Navigation">
-      <a href="/about.html">About</a>
-      <a href="/services.html">Services</a>
-      <a href="/contact.html" class="cta">Contact</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html" class="cta">Contact</a>
     </nav>
     <button class="mobile-menu-toggle" aria-label="Toggle mobile menu" aria-expanded="false" aria-controls="main-nav">
       <span></span>
@@ -101,25 +101,25 @@
 </main>
 
 
-<script src="/assets/js/main.js" defer></script>
+<script src="assets/js/main.js" defer></script>
 <footer class="site-footer">
   <div class="wrap footer-grid">
     <div class="brand-col">
-      <img src="/logo/zoon-logo.svg" alt="ZOON CORP" height="36">
+      <img src="logo/zoon-logo.svg" alt="ZOON CORP" height="36">
       <p>Connecting global agriculture with enterprise technology. Supply, systems, scale.</p>
     </div>
     <div class="links-col">
       <h4>Company</h4>
-      <a href="/index.html">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/services.html">Services</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </div>
     <div class="contact-col">
       <h4>Legal</h4>
-      <a href="/privacy-policy.html">Privacy Policy</a>
-      <a href="/terms.html">Terms of Service</a>
-      <a href="/sitemap.xml">Sitemap</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Service</a>
+      <a href="sitemap.xml">Sitemap</a>
     </div>
     <div class="contact-col">
       <h4>Connect</h4>
