Cleanup: relative paths, header/footer fragments, standardize fonts, update main.js for GH Pages

--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Terms & Conditions — ZOON CORP</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="canonical" href="https://www.zooncorp.com/terms.html">
   <script type="application/ld+json">
@@ -13,7 +13,7 @@
   "@type": "Organization",
   "name": "ZOON CORP Pvt Ltd",
   "url": "https://www.zooncorp.com",
-  "logo": "https://www.zooncorp.com/logo/zoon-logo.svg",
+  "logo": "https://www.zooncorp.com/logo/zoon-logo.png",
     "contactPoint": [
     {
       "@type": "ContactPoint",
@@ -31,7 +31,7 @@
 <body class="page-legal">
 <header class="site-header">
   <div class="wrap">
-    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
+    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.png" alt="ZOON CORP" height="40"></a>
     <nav id="main-nav" class="nav" role="navigation" aria-label="Main Navigation">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
