--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   "@type": "Organization",
   "name": "ZOON CORP Pvt Ltd",
   "url": "https://www.zooncorp.com",
-  "logo": "https://www.zooncorp.com/logo/zoon-logo.svg",
+  "logo": "https://www.zooncorp.com/logo/zoon-logo.png",
     "contactPoint": [
     {
       "@type": "ContactPoint",
@@ -32,7 +32,7 @@
 <body class="page-contact">
 <header class="site-header">
   <div class="wrap">
-    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
+    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.png" alt="ZOON CORP" height="40"></a>
     <nav id="main-nav" class="nav" role="navigation" aria-label="Main Navigation">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
