--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
   "@type": "Organization",
   "name": "ZOON CORP Pvt Ltd",
   "url": "https://www.zooncorp.com",
-  "logo": "https://www.zooncorp.com/logo/zoon-logo.svg",
+  "logo": "https://www.zooncorp.com/logo/zoon-logo.png",
     "contactPoint": [
     {
       "@type": "ContactPoint",
@@ -33,7 +33,7 @@
 <a href="#main" class="skip-link">Skip to main content</a>
 <header class="site-header">
   <div class="wrap">
-    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.svg" alt="ZOON CORP" height="40"></a>
+    <a class="brand" href="index.html" title="ZOON CORP — Home"><img src="logo/zoon-logo.png" alt="ZOON CORP" height="40"></a>
     <nav id="main-nav" class="nav" role="navigation" aria-label="Main Navigation">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
@@ -105,7 +105,7 @@
 <footer class="site-footer">
   <div class="wrap footer-grid">
     <div class="brand-col">
-      <img src="logo/zoon-logo.svg" alt="ZOON CORP" height="36">
+      <img src="logo/zoon-logo.png" alt="ZOON CORP" height="36">
       <p>Connecting global agriculture with enterprise technology. Supply, systems, scale.</p>
     </div>
     <div class="links-col">
